[tool.poetry]
name = "data-structures"
version = "0.1.0"
description = "Data Structures implemented in Python"
authors = ["Kian Mehrabani <kianmehrabani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
